# Code-V1_GreenLang

./: .bandit  .coveragerc  .dockerignore  .editorconfig  .env.example  .env.template  .flake8  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.json  .pre-commit-config.yaml  .trufflehog.toml  .trufflehogignore  10K_FACTORS_STATUS_AND_ROADMAP.md  2025_GreenLang_Aboutus.md  =2.2.0  =22.2.0  =4.12  ACCEPTANCE_CHECKLIST.md  ADD_GL_TO_PATH.ps1  AGENT12_COMPLETION_REPORT.md  AGENT12_DECARBONIZATION_ROADMAP_DESIGN.md  AGENT12_FINAL_100_REPORT.md  AGENT12_VERIFICATION_REPORT.md  AGENT1_AGENT2_VALIDATION_REPORT.md  AGENTS_001_002_012_AUDIT_REPORT.md  AGENT_001_FINAL_STATUS.md  AGENT_001_VALIDATION_SUMMARY.md  AGENT_002_FINAL_STATUS.md  AGENT_002_VALIDATION_SUMMARY.md  AGENT_003_FINAL_STATUS.md  AGENT_003_VALIDATION_SUMMARY.md  AGENT_004_VALIDATION_SUMMARY.md  AGENT_005_FINAL_STATUS.md  AGENT_005_VALIDATION_SUMMARY.md  AGENT_007_VALIDATION_SUMMARY.md  AGENT_CATEGORIZATION_AUDIT.md  AGENT_CONSOLIDATION_SUMMARY.md  AGENT_FACTORY_AND_PROCESS_HEAT_LOCATION_REPORT.md  (+644 more)
GL Agents/GL-014_Exchangerpro/: pyproject.toml
GL Agents/GL-014_Exchangerpro/audit/: schemas.py
GL Agents/GL-014_Exchangerpro/calculators/: __init__.py
GL Agents/GL-014_Exchangerpro/core/: circuit_breaker.py  schemas.py
GL Agents/GL-014_Exchangerpro/explainability/: explanation_schemas.py
GL Agents/GL-014_Exchangerpro/integrations/: tag_mapping.py
GL Agents/GL-014_Exchangerpro/safety/: emergency_shutdown.py  guardrails.py
GL Agents/GL-014_Exchangerpro/tests/golden/: test_heat_exchanger.py
GL Agents/GL-014_Exchangerpro/tests/integration/: __init__.py  test_api.py
GreenLang Development/02-Applications/GL-Agent-Factory/: .secrets.baseline  CLI_COMPLETE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS_DASHBOARD.md  DEVOPS_PRODUCTION_TODO.md  ENTERPRISE_ARCHITECTURE_TODO.md  EXECUTIVE_SUMMARY.md  MASTER_TODO_WEEK1.md  REGULATORY_COMPLIANCE_TODO.md  WEEK1_IMPLEMENTATION_COMPLETE.md  pyproject.toml  pytest.ini  requirements-dev.txt  tox.ini
_archive/06_fy28_plus_premature_apps/GL-016/: .gitlab-ci.yml  TOOLS_README.md  agent_spec.yaml  pyproject.toml  run.json  tools.py
applications/GL Agents/GL-001_Thermalcommand/: __init__.py  cli.py  pyproject.toml
applications/GL-017/: .env.template  pyproject.toml  requirements.txt  run.json
applications/GL-017/calculators/: __init__.py  provenance.py  vacuum_calculator.py
applications/GL-017/deployment/: configmap.yaml  hpa.yaml  networkpolicy.yaml  pvc.yaml  service.yaml  serviceaccount.yaml
applications/GL-017/integrations/: __init__.py
applications/GL-017/sbom/: sbom.json
applications/GL-017/tests/: pytest.ini
applications/gl_agents/GL-003_UnifiedSteam/: pyproject.toml
applications/gl_agents/GL-007_FurnacePulse/: docker-compose.yaml  pack.yaml  pyproject.toml
applications/gl_agents/GL-011_FuelCraft/: TODO_95_PLUS.md  docker-compose.yaml  pyproject.toml
cbam-pack-mvp/: RALPHY_MVP_TASKS.md  README.md  pyproject.toml
cbam-pack-mvp/.ralphy/: config.yaml
cbam-pack-mvp/data/emission_factors/: cbam_defaults_2024.json
cbam-pack-mvp/src/cbam_pack/: __init__.py  cli.py  errors.py  models.py  pipeline.py
cbam-pack-mvp/templates/: cbam_config_template.yaml
cbam-pack-mvp/tests/: test_audit_bundle_determinism.py  test_cli_pipeline_integration.py  test_excel_output_determinism.py  test_validator_policy_behaviors.py  test_web_admin_endpoints.py  test_web_export_gate.py  test_web_multiapp_shell.py  test_web_security.py  test_web_ux_budgets.py  test_web_v1_export_gate.py  test_web_v2_eudr_ghg_iso_endpoints.py  test_web_visual_regression.py
cbam-pack-mvp/tmp_release_det_run1/: cbam_report.xml
cbam-pack-mvp/tmp_release_det_run2/audit/: assumptions.json
greenlang-normalizer/: README.md  pyproject.toml
greenlang-normalizer/config/: canonical_units.yaml  confidence_thresholds.yaml  policy_defaults.yaml
greenlang-normalizer/config/compliance_profiles/: csrd_esrs.yaml  ghg_protocol.yaml  sec_climate.yaml
greenlang-normalizer/docs/api/: README.md
greenlang-normalizer/docs/compliance/: README.md
greenlang-normalizer/docs/developer/: README.md
greenlang-normalizer/docs/governance/: README.md
greenlang-normalizer/docs/operations/: README.md
greenlang-normalizer/infrastructure/: README.md
greenlang-normalizer/infrastructure/docker/: Dockerfile.core  Dockerfile.review-console  Dockerfile.service  docker-compose.test.yaml  docker-compose.yaml
greenlang-normalizer/infrastructure/kubernetes/: configmap.yaml  deployment.yaml
greenlang-normalizer/infrastructure/monitoring/: grafana-dashboard.json  prometheus-rules.yaml
greenlang-normalizer/infrastructure/terraform/: main.tf  variables.tf
greenlang-normalizer/review-console/api/: __init__.py  routes.py
greenlang-normalizer/review-console/backend/: pyproject.toml
greenlang-normalizer/review-console/frontend/: .env.example  .gitignore  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
greenlang-normalizer/review-console/web/: README.md
greenlang-normalizer/tests/cross_validation/: __init__.py  test_unit_consistency.py
greenlang-normalizer/tests/golden/: README.md  __init__.py  conftest.py  pytest.ini  test_entity_resolution.py  test_full_pipeline.py  test_unit_conversion.py
greenlang-normalizer/tests/integration/: __init__.py  test_api_integration.py
greenlang-normalizer/tests/property/: __init__.py  conftest.py  pytest.ini  strategies.py  test_conversion_properties.py  test_dimension_properties.py  test_roundtrip_properties.py
greenlang-normalizer/vocab/fuels/: common_fuels.yaml
greenlang-normalizer/vocab/materials/: common_materials.yaml
greenlang-normalizer/vocab/processes/: common_processes.yaml
greenlang-normalizer/vocab/schemas/: vocabulary_entry.yaml
greenlang-normalizer/vocab/units/: unit_registry.yaml
greenlang/factors/sdk/: CHANGELOG.md  DEPRECATED.md  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.3.0.md  __init__.py  pyproject.toml  setup.py
(+30744 files in other folders)
