[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greenlang-cli"
version = "0.3.0"
description = "Climate Intelligence Platform - Enterprise infrastructure with powerful SDK for climate-aware applications"
readme = "README.md"
authors = [{ name = "GreenLang Maintainers", email = "maintainers@greenlang.io" }]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
  "climate",
  "emissions",
  "sustainability",
  "carbon",
  "green",
  "environment",
  "AI",
  "orchestration",
  "platform",
  "infrastructure",
  "framework",
  "SDK",
  "climate-intelligence",
  "decarbonization",
  "net-zero",
  "ESG",
  "HVAC",
  "buildings",
  "energy"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Framework :: Pydantic",
  "Natural Language :: English",
]
dependencies = [
  "typer==0.9.0",
  "pydantic==2.12.4",
  "pyyaml==6.0.1",
  "rich==13.7.0",
  "jsonschema==4.21.1",
  "packaging==23.2",
  "python-dotenv==1.0.1",
  "typing-extensions==4.9.0",
  "httpx==0.26.0",
  "requests==2.32.4",
  "networkx==3.2.1",
  "tenacity==8.2.3",
  "pybreaker==1.0.2",
  "psutil==7.1.3",
]

[project.urls]
"Homepage" = "https://greenlang.io"
"Documentation" = "https://greenlang.io/docs"
"Repository" = "https://github.com/greenlang/greenlang"
"Bug Tracker" = "https://github.com/greenlang/greenlang/issues"
"Changelog" = "https://github.com/greenlang/greenlang/blob/main/CHANGELOG.md"
"Discord" = "https://discord.gg/greenlang"

[project.scripts]
# CLI entry points
gl = "greenlang.cli.main:main"
greenlang = "greenlang.cli.main:main"  # Backward compatibility

[project.optional-dependencies]
analytics = [
  "pandas==2.1.4",
  "numpy==1.26.3",
]
cli = [
  "click==8.1.7",
  "rich==13.7.0",
]
data = [
  "pandas==2.1.4",
  "numpy==1.26.3",
  "openpyxl==3.1.2",
  "jinja2==3.1.6",
  "weasyprint==60.2",
  "sqlalchemy==2.0.25",
  "alembic==1.13.1",
  "psycopg2-binary==2.9.9",
  "pymongo==4.6.1",
]
llm = [
  "openai==1.12.0",
  # LangChain: Required for core GreenLang RAG tools (scripts/build_vector_store.py, greenlang/cli/assistant_rag.py)
  # NOTE: GL-CSRD-APP uses greenlang.intelligence abstraction layer instead of direct LangChain imports
  "langchain==0.1.9",
  "langchain-openai==0.0.5",
  "langchain-community==0.0.24",
  "anthropic==0.18.1",
  "pypdf==4.0.1",
]
ml = [
  "torch==2.1.2",
  "sentence-transformers==2.3.1",
  "transformers==4.37.2",
  "scikit-learn==1.4.0",
]
vector-db = [
  "weaviate-client==4.4.1",
  "chromadb==0.4.22",
  "pinecone-client==3.0.2",
  "faiss-cpu==1.7.4",
  "qdrant-client==1.7.3",
]
ai-full = [
  "greenlang-cli[llm,ml,vector-db]",
]
server = [
  "aiohttp==3.9.3",
  "fastapi==0.109.2",
  "uvicorn[standard]==0.27.1",
  "redis==5.0.1",
  "celery==5.3.6",
  "prometheus-client==0.19.0",
  "opentelemetry-api==1.22.0",
  "opentelemetry-sdk==1.22.0",
  "opentelemetry-instrumentation-fastapi==0.43b0",
  "structlog==24.1.0",
  "gunicorn==21.2.0",
  "python-multipart==0.0.9",
  "asyncpg==0.29.0",
  "aioredis==2.0.1",
  "slowapi==0.1.9",
  "httpx==0.26.0",
]
security = [
  "cryptography==46.0.3",
  "PyJWT==2.8.0",
]
sbom = [
  "sigstore==3.0.0",
  "cyclonedx-bom==4.4.0",
  "cryptography==46.0.3",
]
supply-chain = [
  "sigstore==3.0.0",
  "cyclonedx-bom==4.4.0",
  "cryptography==46.0.3",
  "pip-audit==2.7.0",
  "safety==3.0.1",
]
test = [
  "pytest==7.4.4",
  "pytest-cov==4.1.0",
  "pytest-asyncio==0.23.4",
  "pytest-mock==3.12.0",
  "pytest-timeout==2.2.0",
  "pytest-xdist==3.5.0",
  "pytest-benchmark==4.0.0",
  "pytest-regressions==2.5.0",
  "hypothesis==6.98.0",
  "psutil==7.1.3",
  "coverage[toml]==7.4.1",
  "faker==22.6.0",
  "responses==0.24.1",
  "freezegun==1.4.0",
  "factory-boy==3.3.0",
  "greenlang-cli[cli]",
  "greenlang-cli[data]",
  "greenlang-cli[analytics]",
  "greenlang-cli[security]",
]
dev = [
  "mypy==1.8.0",
  "ruff==0.2.1",
  "black==24.1.1",
  "isort==5.13.2",
  "bandit==1.7.7",
  "types-PyYAML==6.0.12.12",
  "types-requests==2.31.0.20240125",
  "types-redis==4.6.0.20240106",
  "types-jsonschema==4.21.0.20240118",
  "ipython==8.21.0",
  "jupyter==1.0.0",
  "pre-commit==3.6.0",
  "watchdog==4.0.0",
  "docker==7.1.0",
  "kubernetes==29.0.0",
  "flake8==7.0.0",
  "pylint==3.0.3",
  "autopep8==2.0.4",
]
doc = [
  "mkdocs==1.5.3",
  "mkdocs-material==9.5.7",
  "mkdocstrings==0.24.0",
]
full = [
  "greenlang-cli[cli]",
  "greenlang-cli[data]",
  "greenlang-cli[analytics]",
  "greenlang-cli[llm]",
  "greenlang-cli[server]",
  "greenlang-cli[security]",
]
all = [
  "greenlang-cli[full]",
  "greenlang-cli[test]",
  "greenlang-cli[dev]",
  "greenlang-cli[doc]",
  "greenlang-cli[ai-full]",
]

# Removed setuptools_scm - using static version


[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "greenlang*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.md", "*.jinja", "*.bat", "*.ps1"]
"core.greenlang" = [
  "schemas/*.json",
  "data/**/*.json",
  "configs/*.yaml",
  "policy/bundles/**/*",
]
"greenlang" = [
  "schemas/*.json",
  "data/**/*.json",
  "examples/**/*",
]
"greenlang.utils" = [
  "*.py",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
# Pytest configuration (duplicates pytest.ini for tool support)
# NOTE: pytest.ini takes precedence if both exist
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# AsyncIO mode for pytest-asyncio (auto discovers async tests)
asyncio_mode = "auto"

# Add coverage reporting to pytest runs
# NOTE: Coverage threshold is set to 85% (minimum for CI gate).
# 95% is aspirational but too strict for CI enforcement.
# See .github/workflows/ci.yml for the authoritative CI threshold.
addopts = [
    "-v",                                               # Verbose output
    "--tb=short",                                       # Short traceback format
    "--strict-markers",                                 # Fail on unknown markers
    "--cov=greenlang",                                  # Coverage for main package
    "--cov=core.greenlang",                             # Coverage for core
    "--cov-report=term-missing:skip-covered",           # Terminal report
    "--cov-report=html:.coverage_html",                 # HTML report
    "--cov-report=xml:coverage.xml",                    # XML report for CI
    "--cov-fail-under=85",                              # Fail if coverage < 85% (matches CI)
]

[tool.coverage.run]
# Coverage measurement configuration
branch = true                                            # Measure branch coverage
parallel = true                                          # Support parallel test execution
source = ["greenlang", "core/greenlang"]
omit = [
    "*/tests/*",
    "*/__main__.py",
    "*/conftest.py",                                     # Omit conftest files
    "*/compat/*",
    "*/examples/*",
    "*/cli/templates/*",
    "*/_version.py",
    "*/.venv/*",
    "*/.tox/*",
    "*/site-packages/*",
]

[tool.coverage.report]
# Coverage reporting configuration
# NOTE: 85% is the enforced minimum (matches CI gate in .github/workflows/ci.yml).
# 95% is aspirational for mature modules but not enforced at CI level.
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@abstractmethod",
    "except ImportError",
    "except ModuleNotFoundError",
    "pass",
]
precision = 2
show_missing = true
skip_covered = false
fail_under = 85                                          # Enforce 85% coverage minimum (matches CI)

[tool.coverage.html]
directory = ".coverage_html"                             # HTML report directory

[tool.coverage.xml]
output = "coverage.xml"                                  # XML report for CI/CD