[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greenlang-cli"
version = "0.3.0"
description = "GreenLang Climate OS: auditable climate data foundation and compliance applications, with Factors as the current hardened foundation"
readme = "README.md"
authors = [{ name = "GreenLang Maintainers", email = "maintainers@greenlang.io" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = [
  "climate",
  "emissions",
  "sustainability",
  "carbon",
  "green",
  "environment",
  "AI",
  "orchestration",
  "platform",
  "infrastructure",
  "framework",
  "SDK",
  "climate-intelligence",
  "decarbonization",
  "net-zero",
  "ESG",
  "HVAC",
  "buildings",
  "energy"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Framework :: Pydantic",
  "Natural Language :: English",
]
dependencies = [
  "typer==0.9.0",
  "pydantic==2.12.5",
  "pyyaml==6.0.1",
  "rich==13.7.0",
  "jsonschema==4.26.0",
  "packaging==23.2",
  "python-dotenv==1.2.2",
  "typing-extensions==4.15.0",
  "httpx==0.28.1",
  "requests==2.33.0",
  "networkx==3.2.1",
  "tenacity==8.2.3",
  "pybreaker==1.0.2",
  "psutil==7.1.3",
]

[project.urls]
"Homepage" = "https://greenlang.io"
"Documentation" = "https://greenlang.io/docs"
"Repository" = "https://github.com/akshay-greenlang/Code-V1_GreenLang"
"Bug Tracker" = "https://github.com/akshay-greenlang/Code-V1_GreenLang/issues"
"Changelog" = "https://github.com/akshay-greenlang/Code-V1_GreenLang/blob/master/CHANGELOG.md"
"Discord" = "https://discord.gg/greenlang"

[project.scripts]
# CLI entry points
gl = "greenlang.cli.main:main"
greenlang = "greenlang.cli.main:main"  # Backward compatibility

[project.optional-dependencies]
# ---------------------------------------------------------------------------
# Data & Analytics (from config/requirements.txt, greenlang/monitoring/requirements.txt)
# ---------------------------------------------------------------------------
analytics = [
  "pandas==2.1.4",
  "numpy==1.26.3",
  "scipy==1.12.0",
]
cli = [
  "click==8.1.7",
  "rich==13.7.0",
]
data = [
  "pandas==2.1.4",
  "numpy==1.26.3",
  "openpyxl==3.1.2",
  "xlrd==2.0.1",
  "jinja2==3.1.6",
  "weasyprint==60.2",
  "sqlalchemy==2.0.25",
  "alembic==1.18.4",
  "psycopg2-binary==2.9.9",
  "pymongo==4.16.0",
  "lxml==5.1.0",
  "beautifulsoup4==4.12.3",
  "python-docx==1.2.0",
  "python-dateutil==2.9.0.post0",
  "simpleeval==1.0.5",
]
# ---------------------------------------------------------------------------
# PDF processing (from config/requirements.txt, config/requirements-pinned.txt)
# ---------------------------------------------------------------------------
pdf = [
  "pdfplumber==0.11.9",
  "pdfminer-six==20221105",
  "pypdf2==3.0.1",
  "pypdf==6.10.2",
  "reportlab==4.0.9",
  "pillow==12.1.1",
]
# ---------------------------------------------------------------------------
# Visualization (from config/requirements.txt, greenlang/monitoring/requirements.txt)
# ---------------------------------------------------------------------------
visualization = [
  "matplotlib==3.8.2",
  "seaborn==0.13.2",
  "plotly==5.18.0",
]
# ---------------------------------------------------------------------------
# NLP (from config/requirements.txt - spaCy pipeline)
# ---------------------------------------------------------------------------
nlp = [
  "spacy==3.8.11",
  "spacy-legacy==3.0.12",
  "spacy-loggers==1.0.5",
]
# ---------------------------------------------------------------------------
# Graph database (from config/requirements-pinned.txt)
# ---------------------------------------------------------------------------
graph = [
  "neo4j==5.16.0",
]
# ---------------------------------------------------------------------------
# AI / LLM (from config/requirements.txt, tests/requirements_test.txt)
# ---------------------------------------------------------------------------
llm = [
  "openai==2.16.0",
  "langchain==0.1.9",
  "langchain-core==0.1.9",
  "langchain-openai==0.0.5",
  "langchain-community==0.4.1",
  "anthropic==0.18.1",
  "pypdf==6.10.2",
]
ml = [
  "torch==2.1.2",
  "sentence-transformers==2.3.1",
  "transformers==4.37.2",
  "scikit-learn==1.4.0",
]
vector-db = [
  "weaviate-client==4.20.4",
  "chromadb==0.4.22",
  "pinecone-client==3.0.2",
  "faiss-cpu==1.7.4",
  "qdrant-client==1.16.2",
]
ai-full = [
  "greenlang-cli[llm,ml,vector-db]",
]
# ---------------------------------------------------------------------------
# Server / API (from config/requirements.txt, greenlang/integration/api/requirements.txt,
#   greenlang/config/greenlang_registry/requirements.txt, greenlang/monitoring/requirements.txt,
#   deployment/docker/base/requirements-base.txt)
# ---------------------------------------------------------------------------
server = [
  "aiohttp==3.9.3",
  "fastapi==0.109.2",
  "uvicorn[standard]==0.27.1",
  "redis==5.0.1",
  "celery==5.3.6",
  "prometheus-client==0.19.0",
  "opentelemetry-api==1.22.0",
  "opentelemetry-sdk==1.40.0",
  "opentelemetry-instrumentation-fastapi==0.43b0",
  "structlog==25.5.0",
  "gunicorn==21.2.0",
  "python-multipart==0.0.26",
  "asyncpg==0.29.0",
  "aioredis==2.0.1",
  "slowapi==0.1.9",
  "httpx==0.28.1",
  "pydantic-settings==2.1.0",
  "python-json-logger==2.0.7",
  "aiofiles==23.2.1",
  "cachetools==5.3.2",
  "email-validator==2.1.0",
]
# ---------------------------------------------------------------------------
# Auth (from greenlang/integration/api/requirements.txt,
#   greenlang/config/greenlang_registry/requirements.txt)
# ---------------------------------------------------------------------------
security = [
  "cryptography==46.0.7",
  "PyJWT==2.8.0",
  "python-jose[cryptography]==3.4.0",
  "passlib[bcrypt]==1.7.4",
]
sbom = [
  "sigstore==3.0.0",
  "cyclonedx-bom==4.4.0",
  "cryptography==46.0.7",
]
supply-chain = [
  "sigstore==3.0.0",
  "cyclonedx-bom==4.4.0",
  "cryptography==46.0.7",
  "pip-audit==2.10.0",
  "safety==3.0.1",
]
# ---------------------------------------------------------------------------
# Monitoring (from greenlang/monitoring/requirements.txt)
# ---------------------------------------------------------------------------
monitoring = [
  "prometheus-client==0.19.0",
  "prometheus-api-client==0.5.3",
  "elasticsearch==8.11.0",
  "elasticsearch-dsl==8.11.0",
  "statsd==4.0.1",
  "python-pptx==0.6.23",
  "markdown==3.8.1",
  "aiosmtplib==3.0.1",
]
# ---------------------------------------------------------------------------
# Testing (from config/requirements-test.txt, tests/requirements_test.txt)
# ---------------------------------------------------------------------------
test = [
  "pytest==8.4.2",
  "pytest-cov==4.1.0",
  "pytest-asyncio==1.3.0",
  "pytest-mock==3.12.0",
  "pytest-timeout==2.2.0",
  "pytest-xdist==3.5.0",
  "pytest-benchmark==4.0.0",
  "pytest-regressions==2.10.0",
  "pytest-html==3.2.0",
  "pytest-json-report==1.5.0",
  "hypothesis==6.98.0",
  "psutil==7.1.3",
  "coverage[toml]==7.4.1",
  "faker==40.1.2",
  "responses==0.24.1",
  "freezegun==1.4.0",
  "factory-boy==3.3.0",
  "deepdiff==6.7.1",
  "greenlang-cli[cli]",
  "greenlang-cli[data]",
  "greenlang-cli[analytics]",
  "greenlang-cli[security]",
]
# ---------------------------------------------------------------------------
# Development (from config/requirements-test.txt, greenlang/monitoring/requirements.txt)
# ---------------------------------------------------------------------------
dev = [
  "mypy==1.8.0",
  "ruff==0.14.14",
  "black==24.1.1",
  "isort==5.13.2",
  "bandit==1.7.7",
  "types-PyYAML==6.0.12.12",
  "types-requests==2.31.0.20240125",
  "types-redis==4.6.0.20240106",
  "types-jsonschema==4.21.0.20240118",
  "ipython==8.38.0",
  "jupyter==1.0.0",
  "pre-commit==4.5.1",
  "watchdog==6.0.0",
  "docker==7.1.0",
  "kubernetes==29.0.0",
  "flake8==7.3.0",
  "pylint==3.0.3",
  "autopep8==2.0.4",
  "memory-profiler==0.61.0",
  "line-profiler==4.1.2",
]
doc = [
  "mkdocs==1.5.3",
  "mkdocs-material==9.5.7",
  "mkdocstrings==0.24.0",
]
# ---------------------------------------------------------------------------
# Factors FY27 Test Environment
#   Reproducible toolchain for `tests/factors/` — pinned where the rest of
#   the repo already pins, otherwise floating to keep the group small and
#   easy to install in clean Python 3.11 / 3.12 environments.
#
#   Use:
#       pip install -e ".[factors-test]"
#       pytest tests/factors -v --cov=greenlang.factors
#
#   See `docs/factors/TEST_ENVIRONMENT.md` for the full runbook and the
#   Docker / GitHub Actions equivalents.
# ---------------------------------------------------------------------------
factors-test = [
  # --- pytest core ---------------------------------------------------------
  "pytest>=8.0",
  "pytest-asyncio>=0.23.4",
  "pytest-cov>=4.1.0",
  "pytest-xdist>=3.5.0",
  "pytest-mock>=3.12.0",
  "hypothesis>=6.98.0",
  # --- HTTP / ASGI test plumbing ------------------------------------------
  "httpx>=0.28.1",
  "anyio>=4.0",
  "fastapi==0.124.0",
  "uvicorn[standard]>=0.27.1",
  "starlette==0.50.0",
  "pydantic==2.12.5",
  # --- Datastore drivers (real PG via Docker, fakeredis fallback) ---------
  "psycopg[binary,pool]>=3.3.3",
  "redis>=5.0.1",
  "pgvector>=0.2",
  "fakeredis>=2.20",
  "alembic>=1.13.1",
  # --- Payloads / serialization -------------------------------------------
  "numpy>=1.26.3",
  "pyyaml>=6.0.1",
  # --- Billing & receipts (offline-mocked) --------------------------------
  "stripe>=7.0",
  "python-jose[cryptography]>=3.4.0",  # offline signed-receipt verification
  "cryptography>=42.0",
  "prometheus-client>=0.20",
  # --- HTTP mocking for SDK + connector tests -----------------------------
  "respx>=0.20",
  "responses>=0.24.1",
]

# ---------------------------------------------------------------------------
# Meta-groups
# ---------------------------------------------------------------------------
full = [
  "greenlang-cli[cli]",
  "greenlang-cli[data]",
  "greenlang-cli[analytics]",
  "greenlang-cli[pdf]",
  "greenlang-cli[visualization]",
  "greenlang-cli[llm]",
  "greenlang-cli[server]",
  "greenlang-cli[security]",
  "greenlang-cli[monitoring]",
]
all = [
  "greenlang-cli[full]",
  "greenlang-cli[test]",
  "greenlang-cli[dev]",
  "greenlang-cli[doc]",
  "greenlang-cli[ai-full]",
  "greenlang-cli[nlp]",
  "greenlang-cli[graph]",
  "greenlang-cli[supply-chain]",
  "greenlang-cli[factors-test]",
]

# Removed setuptools_scm - using static version


[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "greenlang*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.md", "*.jinja", "*.bat", "*.ps1"]
"core.greenlang" = [
  "schemas/*.json",
  "data/**/*.json",
  "configs/*.yaml",
  "policy/bundles/**/*",
]
"greenlang" = [
  "schemas/*.json",
  "data/**/*.json",
  "examples/**/*",
]
"greenlang.utils" = [
  "*.py",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
# Pytest configuration (duplicates pytest.ini for tool support)
# NOTE: pytest.ini takes precedence if both exist
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# AsyncIO mode for pytest-asyncio (auto discovers async tests)
asyncio_mode = "auto"

# Add coverage reporting to pytest runs
# NOTE: Coverage threshold is set to 85% (minimum for CI gate).
# 95% is aspirational but too strict for CI enforcement.
# See .github/workflows/ci.yml for the authoritative CI threshold.
addopts = [
    "-v",                                               # Verbose output
    "--tb=short",                                       # Short traceback format
    "--strict-markers",                                 # Fail on unknown markers
    "--cov=greenlang",                                  # Coverage for main package
    "--cov=core.greenlang",                             # Coverage for core
    "--cov-report=term-missing:skip-covered",           # Terminal report
    "--cov-report=html:.coverage_html",                 # HTML report
    "--cov-report=xml:coverage.xml",                    # XML report for CI
    "--cov-fail-under=85",                              # Fail if coverage < 85% (matches CI)
]

[tool.coverage.run]
# Coverage measurement configuration
branch = true                                            # Measure branch coverage
parallel = true                                          # Support parallel test execution
source = ["greenlang", "core/greenlang"]
omit = [
    "*/tests/*",
    "*/__main__.py",
    "*/conftest.py",                                     # Omit conftest files
    "*/compat/*",
    "*/examples/*",
    "*/cli/templates/*",
    "*/_version.py",
    "*/.venv/*",
    "*/.tox/*",
    "*/site-packages/*",
]

[tool.coverage.report]
# Coverage reporting configuration
# NOTE: 85% is the enforced minimum (matches CI gate in .github/workflows/ci.yml).
# 95% is aspirational for mature modules but not enforced at CI level.
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "@abstractmethod",
    "except ImportError",
    "except ModuleNotFoundError",
    "pass",
]
precision = 2
show_missing = true
skip_covered = false
fail_under = 85                                          # Enforce 85% coverage minimum (matches CI)

[tool.coverage.html]
directory = ".coverage_html"                             # HTML report directory

[tool.coverage.xml]
output = "coverage.xml"                                  # XML report for CI/CD
