[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gl-014-exchangerpro"
version = "1.0.0"
description = "GL-014 EXCHANGERPRO - Heat Exchanger Optimizer Agent"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [
    {name = "GreenLang Team", email = "engineering@greenlang.io"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "heat-exchanger",
    "thermal-engineering",
    "fouling-prediction",
    "process-optimization",
    "predictive-maintenance",
    "TEMA",
]

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    "shap>=0.42",
    "lime>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "hypothesis>=6.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "pre-commit>=3.0",
]
api = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "python-multipart>=0.0.6",
    "httpx>=0.24",
]
streaming = [
    "confluent-kafka>=2.0",
    "aiokafka>=0.8",
]
integrations = [
    "asyncua>=1.0",  # OPC-UA
    "opcua>=0.98",
    "requests>=2.31",
    "aiohttp>=3.8",
]
ml = [
    "mlflow>=2.0",
    "optuna>=3.0",
    "catboost>=1.2",
]
reporting = [
    "jinja2>=3.1",
    "weasyprint>=59.0",
    "matplotlib>=3.7",
    "plotly>=5.15",
]
all = [
    "gl-014-exchangerpro[dev,api,streaming,integrations,ml,reporting]",
]

[project.scripts]
gl014 = "gl_014_exchangerpro.cli:main"

[project.urls]
Documentation = "https://docs.greenlang.io/agents/gl-014"
Repository = "https://github.com/greenlang/gl-agents"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "golden: Golden master tests",
    "chaos: Chaos/resilience tests",
    "property: Property-based tests",
    "slow: Slow tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["."]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "ISC", # flake8-implicit-str-concat
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.isort]
known-first-party = ["gl_014_exchangerpro"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "shap.*",
    "lime.*",
    "xgboost.*",
    "lightgbm.*",
    "confluent_kafka.*",
    "asyncua.*",
]
ignore_missing_imports = true
